fixed context menu visibility

--- a/src/features/locators/locatorsPage/locatorsList.less
+++ b/src/features/locators/locatorsPage/locatorsList.less
@@ -203,6 +203,10 @@
           background-color: #f2f2f2;
         }
       }
+
+      &-list {
+        min-height: 190px;
+      }
     }
 
     &_search {
